Use correct Overhear scheme in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Xcode build
       working-directory: OverhearApp
       run: |
-        xcodebuild -scheme OverhearApp -configuration Debug
+        xcodebuild -scheme Overhear -configuration Debug
