--- a/OverhearApp/Resources/Info.plist
+++ b/OverhearApp/Resources/Info.plist
@@ -22,6 +22,10 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Overhear uses your calendars to show and join meetings.</string>
+	<key>NSCalendarsFullAccessUsageDescription</key>
+	<string>Overhear needs full calendar access to list meetings and join the correct links.</string>
+	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
+	<string>Overhear creates reminders and notifications around your calendar events.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
