Add FluidAudio scaffolding and notification status UI

--- a/OverhearApp/Resources/Info.plist
+++ b/OverhearApp/Resources/Info.plist
@@ -28,5 +28,7 @@
 	<string>Overhear creates reminders and notifications around your calendar events.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.productivity</string>
 </dict>
 </plist>
