--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: SwiftPM tests
+      working-directory: OverhearApp
+      run: |
+        swift test
     - name: Xcode build
       working-directory: OverhearApp
       run: |
