Prefer newest Xcode 16.x in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,13 @@ jobs:
     steps:
     - name: Select latest Xcode 16.x
       run: |
-        # Prefer Xcode 16.x if available on the runner; fall back to the default.
-        for XCODE in /Applications/Xcode_16.*.app /Applications/Xcode_16.app; do
-          if [ -d "$XCODE" ]; then
-            sudo xcode-select -s "$XCODE"
-            break
-          fi
-        done
+      # Prefer the newest Xcode 16.x if available on the runner; fall back to the default.
+      for XCODE in $(ls -d /Applications/Xcode_16.*.app /Applications/Xcode_16.app 2>/dev/null | sort -rV); do
+        if [ -d "$XCODE" ]; then
+          sudo xcode-select -s "$XCODE"
+          break
+        fi
+      done
 
     - uses: actions/checkout@v3
     - name: SwiftPM tests
