--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: tenki-macos-latest-medium
+    runs-on: tenki-macos-latest-mini
     env:
       OVERHEAR_INSECURE_NO_KEYCHAIN: "1"
       CI: "true"
