CI: run macOS build on self-hosted runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: tenki-macos-latest-mini
+    runs-on: self-hosted
     env:
       OVERHEAR_INSECURE_NO_KEYCHAIN: "1"
 
