chore: add timeout override for multi-provider review

--- a/.github/workflows/multi-provider-review.yml
+++ b/.github/workflows/multi-provider-review.yml
@@ -94,6 +94,7 @@ jobs:
           HAS_AGENTS: ${{ steps.agents.outputs.exists }}
           SYNTHESIS_MODEL: ${{ vars.SYNTHESIS_MODEL || '' }}
           DIFF_MAX_BYTES: ${{ vars.DIFF_MAX_BYTES || '' }}
+          RUN_TIMEOUT_SECONDS: ${{ vars.RUN_TIMEOUT_SECONDS || '' }}
 
 # To disable auto-run on every PR change, remove the pull_request block.
 # To disable manual triggers, remove the issue_comment block or the IF filter.
