--- a/OverhearApp/Overhear.xcodeproj/xcshareddata/xcschemes/Overhear.xcscheme
+++ b/OverhearApp/Overhear.xcodeproj/xcshareddata/xcschemes/Overhear.xcscheme
@@ -1,78 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion="1500"
-   version="1.7">
+   LastUpgradeVersion = "1500"
+   version = "1.3">
    <BuildAction
-      parallelizeBuildables="YES"
-      buildImplicitDependencies="YES">
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForTesting="YES"
-            buildForRunning="YES"
-            buildForProfiling="YES"
-            buildForArchiving="YES"
-            buildForAnalyzing="YES">
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
-               BuildableIdentifier="primary"
-               BlueprintIdentifier="77A9AB70BCB9480D0E2567B5"
-               BuildableName="Overhear.app"
-               BlueprintName="Overhear"
-               ReferencedContainer="container:Overhear.xcodeproj">
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "77A9AB70BCB9480D0E2567B5"
+               BuildableName = "Overhear.app"
+               BlueprintName = "Overhear"
+               ReferencedContainer = "container:Overhear.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration="Debug"
-      selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv="YES">
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "53EA35F52F1BAFD400145A47"
+               BuildableName = "OverhearTests.xctest"
+               BlueprintName = "OverhearTests"
+               ReferencedContainer = "container:Overhear.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration="Debug"
-      selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB"
-      launchStyle="0"
-      useCustomWorkingDirectory="NO"
-      ignoresPersistentStateOnLaunch="NO"
-      debugDocumentVersioning="YES"
-      debugServiceExtension="internal"
-      allowLocationSimulation="YES">
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      launchStyle = "0"
+      useCustomWorkingDirectory = "NO"
+      ignoresPersistentStateOnLaunch = "NO"
+      debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable
-         runnableDebuggingMode="0">
+         runnableDebuggingMode = "0">
          <BuildableReference
-            BuildableIdentifier="primary"
-            BlueprintIdentifier="77A9AB70BCB9480D0E2567B5"
-            BuildableName="Overhear.app"
-            BlueprintName="Overhear"
-            ReferencedContainer="container:Overhear.xcodeproj">
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "77A9AB70BCB9480D0E2567B5"
+            BuildableName = "Overhear.app"
+            BlueprintName = "Overhear"
+            ReferencedContainer = "container:Overhear.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration="Release"
-      shouldUseLaunchSchemeArgsEnv="YES"
-      savedToolIdentifier=""
-      useCustomWorkingDirectory="NO"
-      debugDocumentVersioning="YES">
+      buildConfiguration = "Release"
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      savedToolIdentifier = ""
+      useCustomWorkingDirectory = "NO"
+      debugDocumentVersioning = "YES">
       <BuildableProductRunnable
-         runnableDebuggingMode="0">
+         runnableDebuggingMode = "0">
          <BuildableReference
-            BuildableIdentifier="primary"
-            BlueprintIdentifier="77A9AB70BCB9480D0E2567B5"
-            BuildableName="Overhear.app"
-            BlueprintName="Overhear"
-            ReferencedContainer="container:Overhear.xcodeproj">
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "77A9AB70BCB9480D0E2567B5"
+            BuildableName = "Overhear.app"
+            BlueprintName = "Overhear"
+            ReferencedContainer = "container:Overhear.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration="Debug">
+      buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration="Release"
-      revealArchiveInOrganizer="YES">
+      buildConfiguration = "Release"
+      revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
