--- a/.github/workflows/multi-provider-review.yml
+++ b/.github/workflows/multi-provider-review.yml
@@ -95,6 +95,8 @@ jobs:
           MAX_CHANGED_FILES: ${{ vars.MAX_CHANGED_FILES || 0 }}
           SKIP_LABELS: ${{ vars.SKIP_LABELS || 'skip-review,no-ai-review' }}
           PROVIDER_LIMIT: ${{ vars.PROVIDER_LIMIT || 0 }}
+          PROVIDER_RETRIES: ${{ vars.PROVIDER_RETRIES || 2 }}
+          BUDGET_MAX_USD: ${{ vars.BUDGET_MAX_USD || 0 }}
           PR_TITLE: ${{ steps.pr.outputs.title }}
           PR_NUMBER: ${{ steps.pr.outputs.number }}
           PR_BODY: ${{ steps.pr.outputs.body }}
