--- a/.github/workflows/multi-provider-review.yml
+++ b/.github/workflows/multi-provider-review.yml
@@ -8,16 +8,21 @@ on:
     types: [opened, synchronize, reopened]
   issue_comment:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   review:
     if: |
-      github.event_name == 'pull_request' ||
-      (github.event.issue.pull_request && (
-        startsWith(github.event.comment.body, '/review') ||
-        contains(github.event.comment.body, '@opencode') ||
-        contains(github.event.comment.body, '@claude')
-      ))
+      (
+        github.event_name == 'pull_request' ||
+        (github.event.issue.pull_request && (
+          startsWith(github.event.comment.body, '/review') ||
+          contains(github.event.comment.body, '@opencode') ||
+          contains(github.event.comment.body, '@claude')
+        ))
+      )
+      && (github.event.pull_request.changed_files <= (vars.MAX_CHANGED_FILES || 9999))
+      && ((github.event.pull_request.additions + github.event.pull_request.deletions) >= (vars.MIN_CHANGED_LINES || 0))
     runs-on: ubuntu-latest
     permissions:
       contents: read
