--- a/.github/workflows/multi-provider-review.yml
+++ b/.github/workflows/multi-provider-review.yml
@@ -21,6 +21,10 @@ jobs:
           contains(github.event.comment.body, '@claude')
         ))
       )
+      && (
+        github.event_name != 'issue_comment' ||
+        contains(fromJson('["OWNER","MEMBER","COLLABORATOR"]'), github.event.comment.author_association)
+      )
       && (github.event.pull_request.changed_files <= (vars.MAX_CHANGED_FILES || 9999))
       && ((github.event.pull_request.additions + github.event.pull_request.deletions) >= (vars.MIN_CHANGED_LINES || 0))
     runs-on: ubuntu-latest
