--- a/.github/workflows/multi-provider-review.yml
+++ b/.github/workflows/multi-provider-review.yml
@@ -9,21 +9,21 @@ on:
   issue_comment:
     types: [created]
   workflow_dispatch:
+    inputs:
+      pr_number:
+        description: "Pull request number to review"
+        required: true
 
 jobs:
   review:
     if: |
       (
         github.event_name == 'pull_request' ||
-        (github.event.issue.pull_request && (
-          startsWith(github.event.comment.body, '/review') ||
-          contains(github.event.comment.body, '@opencode') ||
-          contains(github.event.comment.body, '@claude')
-        ))
-      )
-      && (
-        github.event_name != 'issue_comment' ||
-        contains(fromJson('["OWNER","MEMBER","COLLABORATOR"]'), github.event.comment.author_association)
+        (github.event.issue.pull_request &&
+          (startsWith(github.event.comment.body, '/review') ||
+           contains(github.event.comment.body, '@opencode') ||
+           contains(github.event.comment.body, '@claude'))) ||
+        github.event_name == 'workflow_dispatch'
       )
       && (github.event.pull_request.changed_files <= (vars.MAX_CHANGED_FILES || 9999))
       && ((github.event.pull_request.additions + github.event.pull_request.deletions) >= (vars.MIN_CHANGED_LINES || 0))
