chore: trigger review workflow on push

--- a/.github/workflows/multi-provider-review.yml
+++ b/.github/workflows/multi-provider-review.yml
@@ -4,6 +4,9 @@ name: Multi-Provider Code Review
 # - Automatic on PR events (opened/synchronize/reopened)
 # - Manual on PR comments starting with /review or containing @opencode/@claude
 on:
+  push:
+    branches:
+      - '**'
   pull_request:
     types: [opened, synchronize, reopened]
   issue_comment:
