Fix workflow push gating, clamp defaults, and tighten search/locking logic

--- a/.github/workflows/multi-provider-review.yml
+++ b/.github/workflows/multi-provider-review.yml
@@ -22,7 +22,8 @@ jobs:
     if: |
       (
         github.event_name == 'pull_request' ||
-        (github.event.issue.pull_request &&
+        github.event_name == 'push' ||
+        (github.event.issue?.pull_request &&
           (startsWith(github.event.comment.body, '/review') ||
            contains(github.event.comment.body, '@opencode') ||
            contains(github.event.comment.body, '@claude'))) ||
